Update Register page
- utilize multi-modal steps (try to work with multi-page modals, but need to outsource code)
- new style in CSS

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -36,7 +36,7 @@
                 <h1 style="text-align-all: center">Need activities for kids?</h1>
                 <form>
                     <div class="container" style="max-width: 600px">
-                        <button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#Parent">Get Notified</button>
+                        <button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#Parent1">Get Notified</button>
                         <button type="button" class="btn btn-default btn-block" data-toggle="modal" data-target="#Business1">Share YOUR event</button>
                     </div>
 
@@ -48,10 +48,9 @@
                         !- Source sites
                     -->
 
-                    <div class="modal fade" id="Parent" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <!-- Parent Modal -->
+                    <div class="modal fade" id="Parent1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
-
-                            <!-- Modal content-->
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -59,21 +58,85 @@
                                 </div>
                                 <div class="modal-body">
                                     <div class="tab">
-                                        <p><input class="register" placeholder="Username/Email address" name="fname"></p>
+                                        <p><input class="register" placeholder="Username/Email address" name="username"></p>
                                         <p><input class="register" placeholder="Phone number" oninput="this.className = ''" name="phone"></p>
                                         <p><input class="register" placeholder="Password" oninput="this.className = ''" name="pw"></p>
                                         <p><input class="register" placeholder="Comfirm Password" oninput="this.className = ''" name="confirm_pw"></p>
                                     </div>
                                 </div>
                                 <div class="modal-footer">
-                                    <button type="button" class="submit" data-dismiss="modal">Continue</button>
+                                    <button type="button" class="submit" id="P-User">Continue</button>
                                 </div>
                             </div>
                         </div>
                     </div>
 
+                    <div class="modal fade" id="Parent2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <h4 class="modal-title">Create Account</h4>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="tab">
+                                        <p>I have a kid<input class="register-kid" placeholder="Nickname" name="nickname"></p>
+                                        <p>at the age of<input class="register-kid" placeholder="Age" name="age"> </p>
+                                        <p>with interests<input class="register-kid" placeholder="Interest" name="interest"></p>
+                                        <p>I have a kid<input class="register-kid" placeholder="Nickname" name="nickname">at the age of<input class="register-kid" placeholder="Age" name="age">with interests<input class="register-kid" placeholder="Interest" name="interest"></p>
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="submit" id="P-Redo-User">Back</button>
+                                    <button type="button" class="submit" id="P-Skip">Skip</button>
+                                    <button type="button" class="submit" id="P-Kids">Continue</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-                    <!-- Modal Method #2 -->
+                    <div class="modal fade" id="Parent3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <h4 class="modal-title">Create Account</h4>
+                                </div>
+                                <div class="modal-body">
+
+                                    <div class="tab">
+                                        <p>Parent Account</p>
+                                        <p>Children list</p>
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="submit" id="P-Redo-Kids">Back</button>
+                                    <button type="button" class="submit" id="P-Confirm">Confirm</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="modal fade" id="Parent4" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <h4 class="modal-title">Registration Complete!</h4>
+                                </div>
+                                <div class="modal-body" id="B-3">
+                                    <h1>All done!!!</h1>
+                                    <p></p>
+                                    <p>please log in to your account.</p>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="submit" data-dismiss="modal">Close</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                <!-- Business Modal: Method #2 -->
                     <div class="modal fade" id="Business1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
                             <div class="modal-content">
@@ -93,7 +156,7 @@
                                     </div>
                                 </div>
                                 <div class="modal-footer">
-                                    <button type="button" class="submit" id="Register-info">Continue</button>
+                                    <button type="button" class="submit" id="B-Register-info">Continue</button>
                                 </div>
                             </div>
                         </div>
@@ -143,8 +206,8 @@
                                     </form>
                                 </div>
                                 <div class="modal-footer">
-                                    <button type="button" class="submit" id="Redo-info">Back</button>
-                                    <button type="button" class="submit" id="Confirm-info">Register</button>
+                                    <button type="button" class="submit" id="B-Redo-info">Back</button>
+                                    <button type="button" class="submit" id="B-Confirm-info">Register</button>
                                 </div>
                             </div>
                         </div>
@@ -178,18 +241,51 @@
         </div>
 
     <script>
-        //set "Continue" button id on click to hide first modal and trigger next modal
-        $("#Register-info").on( "click", function() {
+        //Parent Modal
+        //set "Continue" button id on click to hide 1st modal and trigger 2nd modal
+        $("#P-User").on( "click", function() {
+            $('#Parent1').modal('hide');
+            $('#Parent2').modal('show');
+        });
+        //set "Back" button id on click to hide 2nd modal and trigger 1st modal
+        $("#P-Redo-User").on( "click", function() {
+            $('#Parent2').modal('hide');
+            $('#Parent1').modal('show');
+        });
+        //set "Skip" button id on click to hide 2nd modal and trigger 3rd modal
+        $("#P-Skip").on( "click", function() {
+            $('#Parent2').modal('hide');
+            $('#Parent3').modal('show');
+        });
+        //set "Register" button id on click to load input + hide 2nd modal, and trigger 3rd modal
+        $("#P-Kids").on( "click", function() {
+            $('#Parent2').modal('hide');
+            $('#Parent3').modal('show');
+        });
+        //set "Back" button id on click to hide 3rd modal and trigger 2nd modal
+        $("#P-Redo-Kids").on( "click", function() {
+            $('#Parent3').modal('hide');
+            $('#Parent2').modal('show');
+        });
+        //set "Confirm" button id on click to hide 3rd modal and trigger 4th modal
+        $("#P-Confirm").on( "click", function() {
+            $('#Parent3').modal('hide');
+            $('#Parent4').modal('show');
+        });
+
+        //Register Modal
+        //set "Continue" button id on click to hide 1st modal and trigger 2nd modal
+        $("#B-Register-info").on( "click", function() {
             $('#Business1').modal('hide');
             $('#Business2').modal('show');
         });
-        //set "Back" button id on click to hide first modal and trigger next modal
-        $("#Redo-info").on( "click", function() {
+        //set "Back" button id on click to hide 2nd modal and trigger 1st modal
+        $("#B-Redo-info").on( "click", function() {
             $('#Business2').modal('hide');
             $('#Business1').modal('show');
         });
-        //set "Register" button id on click to hide first modal and trigger next modal
-        $("#Confirm-info").on( "click", function() {
+        //set "Confirm" button id on click to hide 2nd modal and trigger 3rd modal
+        $("#B-Confirm-info").on( "click", function() {
             $('#Business2').modal('hide');
             $('#Business3').modal('show');
         });
