--- a/style/register.css
+++ b/style/register.css
@@ -58,6 +58,27 @@
     font-family: 'Ubuntu', sans-serif;
 }
 
+.register-kid{
+    width: 20%;
+    color: rgb(38, 50, 56);
+    font-weight: 700;
+    font-size: 14px;
+    /*letter-spacing: 0.3px;*/
+    background: rgba(136, 126, 126, 0.04);
+    padding: 10px 20px;
+    border: none;
+    border-radius: 20px;
+    outline: none;
+    box-sizing: border-box;
+    border: 2px solid rgba(0, 0, 0, 0.02);
+    /*margin-bottom: 50px;*/
+    margin-left: 5px;
+    margin-right: 5px;
+    text-align: left;
+    margin-bottom: 10px;
+    font-family: 'Ubuntu', sans-serif;
+}
+
 .register:focus {
     border: 2px solid rgba(0, 0, 0, 0.18) !important;
 
