update maps.js event.js with database

--- a/views/event.hbs
+++ b/views/event.hbs
@@ -23,6 +23,12 @@
                     <div class="jumbotron">
                         <div>
                             <form class="form-inline">
+                                <label for="">Search events</label>
+                                <select id="searchOption">
+                                    <option value="getAllEvents">All Events</option>
+                                    <option value="soccer">soccer</option>
+                                    <option value="hockey">hockey</option>
+                                </select>
                                 <div class="form-group">
                                     <!--                    <label for="exampleInputName2">Name</label>-->
                                     <input type="text" id="SearchBar" placeholder="Enter Event/Activity">
