--- a/views/partials/addevent.hbs
+++ b/views/partials/addevent.hbs
@@ -15,7 +15,19 @@
   <div class="form-group">
     <label class="col-xs-3 control-label"><b>End Date</b></label>
     <div class="col-xs-7">
-      <input class="form-control" name="enddate" type="date">
+      <input class="form-control" name="enddate" type="date" id="enddate">
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-xs-3 control-label"><b>Start Time</b></label>
+    <div class="col-xs-7">
+      <input class="form-control" name="starttime" type="time" id="starttime">
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-xs-3 control-label"><b>End Time</b></label>
+    <div class="col-xs-7">
+      <input class="form-control" name="endtime" type="time" id="endtime">
     </div>
   </div>
   <div class="form-group">
