--- a/views/event.hbs
+++ b/views/event.hbs
@@ -26,8 +26,8 @@
                                 <label for="">Search events</label>
                                 <select id="searchOption">
                                     <option value="getAllEvents">All Events</option>
-                                    <option value="soccer">soccer</option>
-                                    <option value="hockey">hockey</option>
+                                    <option value="dance">Dance</option>
+                                    <option value="volleyball">Volleyball</option>
                                 </select>
                                 <div class="form-group">
                                     <!--                    <label for="exampleInputName2">Name</label>-->
