--- a/views/vendor.hbs
+++ b/views/vendor.hbs
@@ -16,10 +16,10 @@
 
         {{> menu}}
 
-        <div class="container mt-4">
+        <div class="container xs-12">
             <p><strong>Welcome {{vendor}}!</strong> </p>
             <div class="row">
-                <div class="col-md-7">
+                <div class="col-xs-7">
                     <table class="table table-bordered table-hover">
 
                         <thead>
@@ -55,10 +55,8 @@
                     </table>
                 </div>
 
-                <div class="col-md-5">
-                    <div class="card-body">
-                        {{> addevent}}
-                    </div>
+                <div class="col-xs-5">
+                    {{> addevent}}
                 </div>
             </div>
         </div>
