--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -15,9 +15,10 @@
 
         {{> menu}}
 
-        <div class="container mt-5">
+        <div class="container xs-12">
+            <p><strong>Welcome Admin!</strong></p>
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-xs-12">
                     <table class="table table-bordered table-hover">
                         <thead>
                         <tr>
@@ -29,7 +30,6 @@
                             <td>End Date</td>
                             <td>Status</td>
                             <td>Approval status</td>
-                            <td>Tag name</td>
                             <td>Actions</td>
                         </tr>
                         </thead>
@@ -44,7 +44,6 @@
                             <td>{{end_date}}</td>
                             <td>{{status}}</td>
                             <td>{{isApproved}}</td>
-                            <td>{{tag_name}}</td>
                             <td>
                                 <!--<a href="/update/<%= data[i].id %>" class="btn btn-info">Edit</a>-->
                                 <!--<a href="/delete/<%= data[i].id %>" class="btn btn-danger">Delete</a>-->
