--- a/views/vendor.hbs
+++ b/views/vendor.hbs
@@ -46,7 +46,7 @@
                                 <!--<a href="/update/<%= data[i].id %>" class="btn btn-info">Edit</a>-->
                                 <!--<a href="/delete/<%= data[i].id %>" class="btn btn-danger">Delete</a>-->
                                 <a href="#" class="btn btn-info">Edit</a>
-                                <a href="#" class="btn btn-danger">Delete</a>
+                                <a href="/delete/{{event_id}}" class="btn btn-danger">Delete</a>
                             </td>
                         </tr>
                         {{/each}}
