--- a/style/register.css
+++ b/style/register.css
@@ -37,6 +37,21 @@
     font-size: 23px;
 }
 
+button.submit {
+    cursor: pointer;
+    border-radius: 5em;
+    color: #fff;
+    background: linear-gradient(to right, #9C27B0, #E040FB);
+    border: 0;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    font-family: 'Ubuntu', sans-serif;
+    margin-left: 12px;
+    font-size: 13px;
+    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
+}
 
 .register{
     width: 90%;
@@ -59,7 +74,7 @@
 }
 
 .register-kid{
-    width: 20%;
+    width: 13%;
     color: rgb(38, 50, 56);
     font-weight: 700;
     font-size: 14px;
