--- a/views/register.hbs
+++ b/views/register.hbs
@@ -72,23 +72,23 @@
                     </div>
 
                     <div class="modal fade" id="Parent2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog">
+                        <div class="modal-dialog modal-lg">
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h4 class="modal-title">Create Account</h4>
+                                    <h4 class="modal-title">Children Profiles (optional)</h4>
+                                    <p>If you wish to create your children's profiles after you have created your account, you can skip this step.</p>
+                                    <button type="button" class="submit" id="P-Skip">Skip</button>
                                 </div>
                                 <div class="modal-body">
                                     <div class="tab">
-                                        <p>I have a kid<input class="register-kid" placeholder="Nickname" name="nickname"></p>
-                                        <p>at the age of<input class="register-kid" placeholder="Age" name="age"> </p>
-                                        <p>with interests<input class="register-kid" placeholder="Interest" name="interest"></p>
-                                        <p>I have a kid<input class="register-kid" placeholder="Nickname" name="nickname">at the age of<input class="register-kid" placeholder="Age" name="age">with interests<input class="register-kid" placeholder="Interest" name="interest"></p>
+                                        <p>My kid<input class="register-kid" placeholder="Nickname" name="nickname">is a <span>{{>age}}</span> year-old <span>{{>gender}}</span> who is interested in<input class="register-kid" placeholder="Interest" name="interest"></p>
+                                        <p>My kid<input class="register-kid" placeholder="Nickname" name="nickname">is a <span>{{>age}}</span> year-old <span>{{>gender}}</span> who is interested in<input class="register-kid" placeholder="Interest" name="interest"></p>
+                                        <p>My kid<input class="register-kid" placeholder="Nickname" name="nickname">is a <span>{{>age}}</span> year-old <span>{{>gender}}</span> who is interested in<input class="register-kid" placeholder="Interest" name="interest"></p>
                                     </div>
                                 </div>
                                 <div class="modal-footer">
-                                    <button type="button" class="submit" id="P-Redo-User">Back</button>
-                                    <button type="button" class="submit" id="P-Skip">Skip</button>
+                                    <button type="button" class="submit" id="P-Redo-User">Back</button>                    
                                     <button type="button" class="submit" id="P-Kids">Continue</button>
                                 </div>
                             </div>
@@ -100,10 +100,9 @@
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h4 class="modal-title">Create Account</h4>
+                                    <h4 class="modal-title">Confirm Account Info</h4>
                                 </div>
                                 <div class="modal-body">
-
                                     <div class="tab">
                                         <p>Parent Account</p>
                                         <p>Children list</p>
