--- a/views/partials/addevent.hbs
+++ b/views/partials/addevent.hbs
@@ -1,41 +1,41 @@
 <h2><p class="text-center">Event Form</p></h2>
-<form class="form-horizontal">
+<form action="/add_event" method="post" class="form-horizontal">
   <div class="form-group">
     <label class="col-xs-3 control-label"><b>Event Name</b></label>
     <div class="col-xs-7">
-      <input class="form-control" name="eventname" type="text">
+      <input class="form-control" name="name" type="text">
     </div>
   </div>      
   <div class="form-group">         
     <label class="col-xs-3 control-label"><b>Start Date</b></label>
      <div class="col-xs-7">
-       <input class="form-control" name="startdate" type="date" id="startdate">
+       <input class="form-control" name="start_date" type="date" id="startdate">
      </div>    
   </div>
   <div class="form-group">
     <label class="col-xs-3 control-label"><b>End Date</b></label>
     <div class="col-xs-7">
-      <input class="form-control" name="enddate" type="date" id="enddate">
+      <input class="form-control" name="end_date" type="date" id="enddate">
     </div>
   </div>
   <div class="form-group">
     <label class="col-xs-3 control-label"><b>Start Time</b></label>
     <div class="col-xs-7">
-      <input class="form-control" name="starttime" type="time" id="starttime">
+      <input class="form-control" name="start_time" type="time" id="starttime">
     </div>
   </div>
   <div class="form-group">
     <label class="col-xs-3 control-label"><b>End Time</b></label>
     <div class="col-xs-7">
-      <input class="form-control" name="endtime" type="time" id="endtime">
+      <input class="form-control" name="end_time" type="time" id="endtime">
     </div>
   </div>
-  <div class="form-group">
-    <label class="col-xs-3 control-label"><b>City</b></label>
-    <div class="col-xs-7">
-      <input class="form-control" name="city" type="text">
-    </div>
-  </div>
+  <!--<div class="form-group">-->
+    <!--<label class="col-xs-3 control-label"><b>City</b></label>-->
+    <!--<div class="col-xs-7">-->
+      <!--<input class="form-control" name="city" type="text">-->
+    <!--</div>-->
+  <!--</div>-->
   <div class="form-group">
     <label class="col-xs-3 control-label"><b>Description</b></label>
     <div class="col-xs-7">
