fixed minor bugs, updated session variable

--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -10,6 +10,7 @@
               <li class="align-bottom" id="menuItems"><a href="/">Login</a></li>
               <li id="menuItems"><a href="/event">Event</a></li>
               <li id="menuItems"><a href="/profile" >Profile</a></li>
+              <li id="menuItems"><a href="/logout" >Logout</a></li>
             </ul>
 
           </div>
