Added Home Page & Updated Modals
- Added home.hbs + home.css
- Added link to Home page in menu partial.
- updated Modals with "Terms&Condition" checkbox
- Parent account creation finish with linking to Home page

--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -8,6 +8,7 @@
             </div>
             <ul class="nav navbar-nav navbar-right align-items-end" >
               <li class="align-bottom" id="menuItems"><a href="/">Login</a></li>
+              <li id="menuItems"><a href="/home">Home</a></li>
               <li id="menuItems"><a href="/event">Event</a></li>
               <li id="menuItems"><a href="/profile" >Profile</a></li>
             </ul>
