--- a/views/event.hbs
+++ b/views/event.hbs
@@ -2,10 +2,9 @@
 <html>
     <head>
         <!-- Bootstrap CSS -->
-        <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-
+        <script src="http//code.jquery.com/jquery-1.11.1.min.js"></script>
         <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 
         
         <link href="/css/menu.css" type="text/css" rel="stylesheet" />
