--- a/views/event.hbs
+++ b/views/event.hbs
@@ -2,14 +2,11 @@
 <html>
     <head>
         <!-- Bootstrap CSS -->
-        <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-
-        <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-
-        
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
         <link href="/css/menu.css" type="text/css" rel="stylesheet" />
         <link href="/css/event.css" type="text/css" rel="stylesheet" />
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     </head>
 
     <body>
