updating bootstrap references

--- a/views/addevent.hbs
+++ b/views/addevent.hbs
@@ -4,8 +4,8 @@
 <title>Add Events</title>
 <link href="/css/menu.css" type="text/css" rel="stylesheet" />
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+        {{> bootstrap}}
+
 </head>
 
 <body>
