--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -2,12 +2,8 @@
 <html>
     <head>
         
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+        {{> bootstrap}}        
         <link href="/css/menu.css" type="text/css" rel="stylesheet" />
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        
-
 
     </head>
 
