--- a/views/register.hbs
+++ b/views/register.hbs
@@ -2,11 +2,7 @@
 <html>
     <head>
         <!-- Bootstrap CSS -->
-        <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-        <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-
-
+        {{> bootstrap}}
         <link href="/css/menu.css" type="text/css" rel="stylesheet" />
         <link href="/css/login.css" type="text/css" rel="stylesheet" />
         <link href="/css/register.css" type="text/css" rel="stylesheet" />
