fixed filter search bar #2
working search bar

--- a/views/event.hbs
+++ b/views/event.hbs
@@ -23,16 +23,12 @@
                     <div class="jumbotron">
                         <div>
                             <form class="form-inline">
+                                
                                 <label for="">Search events</label>
                                 <select id="searchOption">
                                     <option value="getAllEvents">All Events</option>
-<<<<<<< Updated upstream
-                                    <option value="dance">Dance</option>
-                                    <option value="volleyball">Volleyball</option>
-=======
-                                    <option value="Dance">dance</option>
-                                    <option value="Volleyball">volleyball</option>
->>>>>>> Stashed changes
+                                    <option value="Dance">Dance</option>
+                                    <option value="Volleyball">Volleyball</option>
                                 </select>
                                 <div class="form-group">
                                     <!--                    <label for="exampleInputName2">Name</label>-->
