--- a/views/event.hbs
+++ b/views/event.hbs
@@ -26,7 +26,7 @@
 
                                 {{#each data}}
 
-                                    <option value={{category}}>{{category}}</option>
+                                    <option value={{name}}>{{name}}</option>
                                 {{/each}}
 
                                 </select>
