search not working again

--- a/views/event.hbs
+++ b/views/event.hbs
@@ -33,7 +33,7 @@
                                 
                                 <div class="checkedbox">
                                     <label for="">
-                                    <input type="checkbox" name="" id="allevent">all events
+                                    <input type="checkbox" name="" class="allevent">all events
                                     </label>
                                 </div>
                                 {{#each data}}
