--- a/views/partials/addevent.hbs
+++ b/views/partials/addevent.hbs
@@ -32,9 +32,14 @@
     </div>
   </div>
   <div class="form-group">
-    <label class="col-xs-3 control-label"><b>Category</b></label>
+    <label class="col-xs-3 control-label"><b>Category</b><b>{{test}}</b></label>
     <div class="col-xs-7">
-      <input class="form-control" name="category" type="text">
+        <select class="form-control" name="category">
+            <option value="" disabled selected>Select your option</option>
+        {{#each tags}}
+            <option values="{{name}}">{{name}}</option>
+        {{/each}}
+        </select>
     </div>
   </div>
   <div class="form-group">
