--- a/views/vendor.hbs
+++ b/views/vendor.hbs
@@ -25,6 +25,7 @@
                             <td>Event</td>
                             <td>Start Date</td>
                             <td>End Date</td>
+                            <td>Tags</td>
                             <td>Status</td>
                             <td>Approval status</td>
                             <td>Actions</td>
@@ -37,13 +38,14 @@
                             <td>{{event}}</td>
                             <td>{{start_date}}</td>
                             <td>{{end_date}}</td>
+                            <td>{{tag_name}}</td>
                             <td>{{status}}</td>
                             <td>{{isApproved}}</td>
                             <td>
                                 <!--<a href="/update/<%= data[i].id %>" class="btn btn-info">Edit</a>-->
                                 <!--<a href="/delete/<%= data[i].id %>" class="btn btn-danger">Delete</a>-->
                                 <a href="#" class="btn btn-info">Edit</a>
-                                <a href="/delete/{{event_id}}" class="btn btn-danger">Delete</a>
+                                <a href="/delete/{{event_id}}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete?');">Delete</a>
                             </td>
                         </tr>
                         {{/each}}
